# bot

./: README.md
assets/: README.md  aruco.py  aruco_markers.yaml  relocalization_node.py
assets/config/: markers.yaml
bot_description/launch/: bot.launch.py
bot_description/urdf/: bot.gazebo  bot.xacro  camera.xacro  depth_camera.xacro  materials.xacro
bot_navigation/: CMakeLists.txt  package.xml
bot_navigation/config/: config_rviz.rviz  navigation.yaml
bot_navigation/launch/: navigation.launch.py
bot_trajectory/: CMakeLists.txt  package.xml
bot_trajectory/src/: trajectory_saver_node.cpp
bot_trajectory/srv/: SaveTrajectory.srv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot_description/share/bot_description/: package.dsv  package.ps1  package.sh  package.xml
install/bot_description/share/bot_description/config/: display.rviz  gazebo.rviz  ros_gz_bridge_gazebo.yaml
install/bot_description/share/bot_description/launch/: bot.launch.py  display.launch.py  gazebo.launch.py
install/bot_description/share/bot_description/meshes/: base_link.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
install/bot_description/share/bot_description/urdf/: bot.gazebo  bot.trans  bot.xacro  materials.xacro
install/bot_description/share/bot_description/world/: bot.world  bott.world
log/: latest_build
